[package]
name = "distribution"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars = "0.9"
cosmwasm_std = { version = "1.0.0-beta1", features = ["full"] }
thiserror = "1.0.23"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cosmwasm-schema = "1.2.5"

[dev-dependencies]
cosmwasm-vm = "1.0.0-beta"
