[package]
name = "distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.0.0-beta1"
cosmwasm-storage = "1.0.0-beta" 
cosmwasm-schema = "1.2.5"
schemars = "0.8"
thiserror = "1.0.23"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"

[dev-dependencies]
cosmwasm-vm = "1.0.0-beta"
